[package]
name = "kdc-tools"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", default-features = false }
clap = { version = "4.0.26", features = ["derive"] }
kile = { version = "0.1.0", path = "../kile" }
rasn-kerberos = "0.6.0"
tokio = { version = "1.22.0", features = ["full"] }

