[package]
name = "kile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.3.0", default-features = false }
chrono = "0.4.23"
derive_more = { version = "0.99.17", default-features = false, features = [
    "from",
] }
futures = "0.3.25"
itertools = { version = "0.10.5", default-features = false }
kerberos_crypto = "0.3.6"
md4 = { version = "0.10.2", default-features = false }
nom = { version = "7.1.1", default-features = false, features = ["alloc"] }
nthash = { version = "0.1.0", path = "../nthash" }
pretty-hex = "0.3.0"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rasn = { git = "https://github.com/sk3w/rasn.git", branch = "workaround" }
rasn-kerberos = { git = "https://github.com/sk3w/rasn.git", branch = "workaround" }
rc4 = { version = "0.1.0", default-features = false }
tokio = { version = "1.22.0", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "time",
    "tracing",
] }
tokio-util = { version = "0.7.4", features = ["codec"] }

[dev-dependencies]
hex-literal = "0.3.4"
md5 = "0.7.0"
