[package]
name = "nlmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bytes = "1.1.0"
hmac = "0.12.1"
md-5 = "0.10.1"
md4 = "0.10.1"
nom = "7.1.1"
nttime = { path = "../nttime" }
rc4 = "0.1.0"
thiserror = "1.0.31"
utf16string = "0.2.0"

[dev-dependencies]
hex-literal = "0.3.4"
pretty-hex = "0.3.0"
